[package]
name = "window"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3.30", features = ["executor"] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-tungstenite = "0.14.0"
hyper-util = { version = "0.1.7", features = ["tokio", "full"] }
rppal = "0.22.1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
url = "2.5.7"
ws2818-rgb-led-spi-driver = "2.0.0"
